# cpp-join-the-dark-side

./: .gitignore  README.md  cpp-coding-standart.md  edu.md  lightweight-style.md  notes.md  snippets.md
code/btl/: void_vector.hpp
code/examples/: test_main.cpp
code/examples/include/: CycleValue.hpp  MirrorMap.hpp
code/examples/tests/: TestDimensionMap.hpp  TestEnumFlattener.hpp  TestIdentifierGenerator.hpp  TestPreviousValue.hpp  TestShadow.hpp
items/: 2_debug_without_macro_in_client.md  3_triangle_wave.md  4_enum_without_counter.md  5_compress_enum.md  item_1.md  item_2.md
items/code/: .gitignore
items/code/examples/: CMakeLists.txt  DimensionMap.hpp  MirrorMap.hpp  PreviousValue.hpp  Protest.hpp  Random.hpp  Shadow.hpp  TestCycleValue.cpp  TestDimensionMap.cpp  TestEnumFlattener.cpp  TestMirrorMap.cpp  TestShadow.cpp  main.cpp  test_main.cpp
items/code/examples/include/: CommonConcepts.hpp  CycleValue.hpp  DimensionMap.hpp  EnumFlattener.hpp  IdentifierGenerator.hpp  MirrorMap.hpp  Protest.hpp  Random.hpp  Style.hpp  Traits.hpp
items/code/examples/tests/: TestCycleValue.hpp  TestMirrorMap.hpp  TestRandom.hpp
refactoring_with_mind_maps/: BE Objects Refactoring.xmind  BE Unit Refactoring.xmind  BE Utils Refactoring.xmind  BE World Refactoring.xmind
standarts/: cpp-coding-standart.md  ide-standart.md  short-cut-standart.md  verbs.md  words.md
